--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,23 +3,43 @@
       xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" th:href="@{'/'}">Acceuil</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" th:href="@{'/list'}">list des clients</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" th:href="@{'/new'}">Ajouter un cluent</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
 <div>
 	<h2 >Customer Relationship Management</h2>
-	<tr>
-		<div align = "left" >		   
-		     <h3><a  th:href="@{'/new'}">Add new</a></h3>     
-	    </div>
 	
-	</tr>
 	<tr>
 	
 	<div class="col-sm-5" align = "center">
                  <div class="panel-body" align = "center" >
-                 <table class="table">
+                 <table class="table table-dark table-striped">
   <thead class="thead-dark">
     <tr>
       		<th>ID</th>
@@ -41,7 +61,7 @@
 		<td th:text="${customer.numero}">Numero</td>
 		<td th:text="${customer.produit}">Produit</td>			
 		<td>
-			<a th:href="@{'/edit/' + ${customer.id}}">Modifier</a>
+			<a class="btn btn-primary" th:href="@{'/edit/' + ${customer.id}}">Modifier</a>
 		</td>							    
 		<td>
 		<!-- Button trigger modal -->
@@ -80,8 +100,5 @@
 
 	</tr>
 
-	</tbody>
-	</table>
-	<div>
 </body>
 </html>
