--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -8,6 +8,30 @@
     <script src= "https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" ></script>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" th:href="@{'/'}">Acceuil</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" th:href="@{'/list'}">list des clients</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" th:href="@{'/new'}">Ajouter un cluent</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 <div align="center">
     <h1>Ajouter Client</h1>
     <br />
