--- a/src/main/resources/templates/Acceuil.html
+++ b/src/main/resources/templates/Acceuil.html
@@ -3,13 +3,15 @@
       xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/cosmo/bootstrap.min.css" />
-	<script src= "https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" ></script>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="../static/css/style.css" th:href="@{css/style.css}"/>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <img  src="../static/images/afro.png" th:src="@{images/afro.png}" class="nav-img" href="#"/>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -22,10 +24,7 @@
           <a class="nav-link" th:href="@{'/list'}">list des clients</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" th:href="@{'/new'}">Ajouter un cluent</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          <a class="nav-link" th:href="@{'/new'}">Ajouter un client</a>
         </li>
       </ul>
     </div>
@@ -34,10 +33,10 @@
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="../static/images/cover.jpg" class="d-block w-100" alt="..." th:src="@{images/cover.jpg}"/>
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="../static/images/cover2.png" class="d-block w-100" alt="..." th:src="@{images/cover2.png}"/>
     </div>
     <div class="carousel-item">
       <img src="..." class="d-block w-100" alt="...">
