--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,21 +17,26 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" th:href="@{'/'}">Acceuil</a>
+          <a class="nav-link active" aria-current="page" th:href="@{'/'}">Accueil</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" th:href="@{'/list'}">list des clients</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" th:href="@{'/new'}">Ajouter un cluent</a>
+          <a class="nav-link" th:href="@{'/new'}">Ajouter un client</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
-
-<div>
-	<h2 >Customer Relationship Management</h2>
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="../static/images/cover3.png" th:src="@{images/cover3.png}" class="d-block w-100" alt="...">
+    </div>
+  </div>
+</div>
+	<h2>Customer Relationship Management</h2>
 	
 	<tr>
 	
