--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -3,9 +3,10 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8" />
-    <title>Create New Product</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/cosmo/bootstrap.min.css" />
-    <script src= "https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" ></script>
+    <title>Gérer les Clients</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+     
     <link rel="stylesheet" href="../static/css/style.css" th:href="@{css/style.css}"/>
 </head>
 <body>
@@ -18,28 +19,34 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" th:href="@{'/'}">Acceuil</a>
+          <a class="nav-link active" aria-current="page" th:href="@{'/'}">Accueil</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" th:href="@{'/list'}">list des clients</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" th:href="@{'/new'}">Ajouter un cluent</a>
+          <a class="nav-link" th:href="@{'/new'}">Ajouter un client</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="../static/images/cover4.png" th:src="@{images/cover4.png}" class="d-block w-100" alt="...">
+    </div>
+  </div>
+</div>
 <div align="center">
-    <h1>Ajouter Client</h1>
-    <br />
+    <h1>Gérer les Clients</h1>
+    <br/>
      <div class="col-sm-4">
     <form action="#" th:action="@{/save}" th:object="${customer}" method="post">
 
       
  		<div alight="left">
             <tr>
-                <label class="form-label" >Nom</label>
                 <td>
 	                <input type="hidden" th:field="*{id}" />
 	                <input type="text" th:field="*{nom}" class="form-control" placeholder="Nom client" />
@@ -47,30 +54,27 @@
             </tr>
          </div>   
             
+            
           	<div alight="left">
           
             <tr>
-                 <label class="form-label" >Prenom</label>
                 <td><input type="text" th:field="*{prenom}" class="form-control" placeholder="Prenom" /></td>
             </tr>
             </div> 
             <div alight="left">
                  <tr>
-                 <label class="form-label" >Email</label>
                 <td><input type="text" th:field="*{Email}" class="form-control" placeholder="Email" /></td>
             </tr>
             </div> 
             
              <div alight="left">
                  <tr>
-                 <label class="form-label" >Numero de telephone</label>
                 <td><input type="text" th:field="*{numero}" class="form-control" placeholder="Numero de telephone" /></td>
             </tr>
             </div>
             
              <div alight="left">
                  <tr>
-                 <label class="form-label" >Produit</label>
                 <td><input type="text" th:field="*{produit}" class="form-control" placeholder="Produit" /></td>
             </tr>
             </div>  
@@ -80,6 +84,12 @@
             </tr>
         </table>
     </form>
+    
+    
 </div>
+<div class="space"></div>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    
 </body>
 </html>
