--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="../static/css/style.css" th:href="@{css/style.css}"/>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
   <div class="container-fluid">
     <img  src="../static/images/afro.png" th:src="@{images/afro.png}" class="nav-img" href="#"/>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,11 +36,9 @@
     </div>
   </div>
 </div>
-	<h2>Customer Relationship Management</h2>
 	
-	<tr>
-	
-	<div class="col-sm-5" align = "center">
+	<div class="space"></div>
+	<div class="container">
                  <div class="panel-body" align = "center" >
                  <table class="table table-dark table-striped">
   <thead class="thead-dark">
@@ -77,11 +75,11 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <h5 class="modal-title" id="exampleModalLabel">supprimer client</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        are you sure ?
+        <h3>êtes-vous sûr ?</h3>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -101,7 +99,7 @@
 
             </div> 
 
-	</tr>
+	
 
 </body>
 </html>
