--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -4,13 +4,19 @@
 <head>
     <meta charset="utf-8" />
     <title>Gérer les Clients</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+<link rel="stylesheet" href="../static/css/style.css" th:href="@{css/style.css}"/>
+<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+<script language="JavaScript" type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.js"></script>
+<script language="JavaScript" type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
+<script language="JavaScript" type="text/javascript" src="../static/js/form.js" th:src="@{js/form.js}"></script>
      
-    <link rel="stylesheet" href="../static/css/style.css" th:href="@{css/style.css}"/>
+
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
   <div class="container-fluid">
     <img  src="../static/images/afro.png" th:src="@{images/afro.png}" class="nav-img" href="#"/>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,14 +48,14 @@
     <h1>Gérer les Clients</h1>
     <br/>
      <div class="col-sm-4">
-    <form action="#" th:action="@{/save}" th:object="${customer}" method="post">
+    <form action="#" th:action="@{/save}" th:object="${customer}" id="form" method="post">
 
       
  		<div alight="left">
             <tr>
                 <td>
 	                <input type="hidden" th:field="*{id}" />
-	                <input type="text" th:field="*{nom}" class="form-control" placeholder="Nom client" />
+	                <input type="text" th:field="*{nom}" class="form-control" name="nom" id="nom" placeholder="Nom client"  />
                 </td>
             </tr>
          </div>   
@@ -58,24 +64,24 @@
           	<div alight="left">
           
             <tr>
-                <td><input type="text" th:field="*{prenom}" class="form-control" placeholder="Prenom" /></td>
+                <td><input type="text" th:field="*{prenom}" class="form-control" name="prenom" id="prenom" placeholder="Prenom"  /></td>
             </tr>
             </div> 
             <div alight="left">
                  <tr>
-                <td><input type="text" th:field="*{Email}" class="form-control" placeholder="Email" /></td>
+                <td><input type="email" th:field="*{Email}" class="form-control" name="email" id="email" placeholder="Email"  /></td>
             </tr>
             </div> 
             
              <div alight="left">
                  <tr>
-                <td><input type="text" th:field="*{numero}" class="form-control" placeholder="Numero de telephone" /></td>
+                <td><input type="text" th:field="*{numero}" class="form-control" name="numero" id="numero" placeholder="Numero de telephone" /></td>
             </tr>
             </div>
             
              <div alight="left">
                  <tr>
-                <td><input type="text" th:field="*{produit}" class="form-control" placeholder="Produit" /></td>
+                <td><input type="text" th:field="*{produit}" class="form-control" name="produit" id="produit" placeholder="Produit" /></td>
             </tr>
             </div>  
 			<br>
@@ -88,8 +94,7 @@
     
 </div>
 <div class="space"></div>
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     
+    <script>$().validate();</script>
 </body>
 </html>
