--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
+      
 <head>
     <meta charset="utf-8" />
     <title>Gérer les Clients</title>
     
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
-<link rel="stylesheet" href="../static/css/style.css" th:href="@{css/style.css}"/>
-<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-<script language="JavaScript" type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.js"></script>
-<script language="JavaScript" type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
-<script language="JavaScript" type="text/javascript" src="../static/js/form.js" th:src="@{js/form.js}"></script>
+<link rel="stylesheet"th:href="@{/css/style.css}"/>
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
+<script type="text/javascript" th:src="@{/js/form.js}"></script>
      
 
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
   <div class="container-fluid">
-    <img  src="../static/images/afro.png" th:src="@{images/afro.png}" class="nav-img" href="#"/>
+    <img th:src="@{/images/afro.png}" class="nav-img" href="#"/>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -40,7 +41,7 @@
 <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="../static/images/cover4.png" th:src="@{images/cover4.png}" class="d-block w-100" alt="...">
+      <img th:src="@{/images/cover4.png}" class="d-block w-100" alt="...">
     </div>
   </div>
 </div>
