--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,58 +1,60 @@
-.nav-img{
-width: 40px;
-margin: 10px;
+.nav-img {
+  width: 40px;
+  margin: 10px;
 }
-	
-	
-.col-sm-4 form input{
-	width: 100%;
+
+.col-sm-4 form input {
+  width: 100%;
   overflow: hidden;
   font-size: px;
   padding: 8px 0;
   margin: 30px 0;
   border-bottom: 1px solid #808080;
-  border-top:none;
-  border-left:none;
+  border-top: none;
+  border-left: none;
   border-right: none;
-	
 }
 
-.col-sm-4 form button{
-	width:100%;
+.col-sm-4 form button {
+  width: 100%;
 }
 
-.space{
-	margin:40px;
+.space {
+  margin: 40px;
 }
 
-h1,h2{
-	margin:20px;
+h1,
+h2 {
+  margin: 20px;
 }
 
-h3, h4, h5, h6 {
-    margin-top: 0;
-    margin-bottom: .5rem;
-    font-weight: 500;
-    line-height: 1.2;
-    color: black;
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+  font-weight: 500;
+  line-height: 1.2;
+  color: black;
 }
 
-label#nom-error.errors{
-	color:red;
+label#nom-error.errors {
+  color: red;
 }
 
-label#prenom-error.errors{
-	color:red;
+label#prenom-error.errors {
+  color: red;
 }
 
-label#email-error.errors{
-	color:red;
+label#email-error.errors {
+  color: red;
 }
 
-label#numero-error.errors{
-	color:red;
+label#numero-error.errors {
+  color: red;
 }
 
-label#produit-error.errors{
-	color:red;
+label#produit-error.errors {
+  color: red;
 }
